--- a/Views/Home/login_view.cshtml
+++ b/Views/Home/login_view.cshtml
@@ -27,13 +27,12 @@
 <nav class="footer">
     <div class="footer-title">
         <div class="social">
-            <h2>Theo Dõi Chúng Tôi</h2>
+            <h2>Liên Hệ</h2>
             <div class="icon">
                 <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
-
         <div class="help">
             <h2>Hướng Dẫn</h2>
             <ul class="de-muc">
@@ -42,17 +41,18 @@
                 <li><a href="https://localhost:44373/Home/chinh_sach_doi_tra_view">Chính Sách Đổi Trả</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
-                <li><h4>Co_Chay® All Right Reserved</h4></li>
+                <li class="reversed"><p>Co_Chay® All Right Reserved</p></li>
             </ul>
         </div>
         <div class="contact_us">
-            <h2>Liên Hệ</h2>
+            <h2>Địa Chỉ</h2>
             <ul class="de-muc">
                 <li><a href="">Địa Chỉ: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
                 <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
                 <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a></li>
             </ul>
         </div>
+
     </div>
 </nav>
 
