--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -31,7 +31,7 @@
     <div class="tab2-title">
         <ul class="title">
             <li class="home">
-                @Html.ActionLink("Home", "web_clothes_view","Home",null, new {@class= "linkbtnfull" })
+                <a href="https://localhost:44373/Home/web_clothes_view">Home</a>
             </li>
             <li class="list">
                 <h2>Clothings</h2>
