--- a/Content/login.css
+++ b/Content/login.css
@@ -65,7 +65,7 @@ body {
     font-family: monospace;
     background-image: url(hinh-pro/background.jpg);
     font-size: 14px;
-    color: #333;
+    color: black;
     text-align: center;
     align-items: center;
     justify-content: space-between;
@@ -155,6 +155,7 @@ body {
 .icon > a > i {
     color: white;
     font-size: 50px;
+    margin:0 10px 0 10px;
 }
 
 .help > h2 {
@@ -184,8 +185,5 @@ body {
     }
 
 .contact_us > h2 {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     color: white;
 }
