--- a/html-main/css/web_clothes.css
+++ b/html-main/css/web_clothes.css
@@ -23,10 +23,20 @@
         justify-content: center;
     }
 }
-
-:root {
+*:root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
+}
+
+body {
+    font-family: monospace;
+    background-image: url(hinh-pro/background.jpg);
+    background-size:cover;
+    font-size: 14px;
+    color: black;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
 
 ul {
@@ -45,12 +55,9 @@ body {
     justify-content: space-evenly;
     padding: 1rem 0;
 }
-.nav > a > img{
-    height: 100px;
-    width: 100px;
+.logo > a > img{
+    height:100px;
 }
-
-
 .nav-link {
     list-style-type: none;
     display: flex;
@@ -73,15 +80,16 @@ body {
 }
 
 .search-box {
-    display: flex;
+    display: flex;    
 }
 
+
 .search-box > button {
-    padding: 0 1rem;
+    padding: 0 2rem;
 }
 
 .input-search {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     border-radius: .25rem;
     font-size: 1.5rem;
     margin: 0 0.25rem ;
@@ -97,7 +105,7 @@ body {
     padding: 1rem;
 }
 .dropdown {
-    position:relative;
+    position: relative;
     display: inline-block
 }
 .dropdown{
@@ -137,7 +145,6 @@ body {
     list-style: none;
     margin: 0 7rem;
 }
-
 .title > li > a{
     text-decoration: none;
     color: #000;
@@ -159,6 +166,9 @@ body {
     background-color:yellow;
     height:5px;
     width: 500px;
+}
+.product{
+    font-size:20px;
 }
 .product-list{
     display: grid;
@@ -183,8 +193,10 @@ body {
 .product-item > .product-item-info > button{
     background-color:yellow;
     border:1px solid #000;
+    font-size:20px;
     cursor:pointer;
-    width: 100px;
+    height:50px;
+    width: 200px;
     border-radius: 20px;
 }
 
@@ -204,48 +216,52 @@ body {
     text-decoration: none;
     color: #000;
 }
-.footer{
+.footer-title {
     justify-content: space-evenly;
     align-items: center;
     display: flex;
-}
-.footer-title{
-    height: 300px;
+    height: 400px;
     width: 100%;
     background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
 }
 .social > h2{
     color:white;
 }
+.footer-title {
+    display:plex;
+    align-items:baseline;
+    justify-content:space-evenly;
+}
+.icon > a{
+    margin:0 5px 0 5px;
+}
 .icon > a > i {
     color: white;
-    font-size: 40px;
+    font-size: 50px;
+    margin: 0 10px 0 10px;
 }
 .help > h2{
     color:white;
 }
 .de-muc>li{
     list-style: none;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0;    
 }
 .de-muc > li > a{
     text-decoration: none;
     color: #fff;
     padding: 0.5rem 1rem;
+    font-size:17px;
+}
+.reversed > p{
+    font-weight:bold;
+    font-size:23px;
+    padding:2rem 0;
+    color:white;
 }
 .contact_us > h2{
     color:white;
 }
-.reserved {
-    display: flex;
-
-}
-    .reserved > h4 {
-        color: white;
-    }
 .title-dieu-khoan{
     display:flex;
     justify-content:center;
