--- a/Views/Home/huong_dan_mua_hang_view.cshtml
+++ b/Views/Home/huong_dan_mua_hang_view.cshtml
@@ -57,8 +57,8 @@
         </ul>
     </div>
 </nav>
-<nav class="help-tag">    
-     @Html.ActionLink("Hướng Dẫn Mua Hàng", "huong_dan_mua_hang_view", "Home", new { @class = "help" })
+<nav class="help-tag">
+    <a class ="help" href="https://localhost:44373/Home/huong_dan_mua_hang_view">Hướng Dẫn Mua Hàng</a>
 </nav>
 <nav class="title-help">
     <div class="main-help">        
