--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -270,12 +270,12 @@ body {
 .dieu-khoan-tag {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;    
 }
-    .dieu-khoan-tag .dieukhoan {
-        width: 200px;
-        font-weight:bold; 
-        font-size:30px;
+    .dieu-khoan-tag > .dieu-khoan {
+        width: 600px;
+        font-weight: bold;
+        font-size: 30px;
         color: black;
         text-decoration: none;
         text-align: center;
