--- a/Views/Home/dieu_khoan_view.cshtml
+++ b/Views/Home/dieu_khoan_view.cshtml
@@ -57,7 +57,7 @@
     </div>
 </nav>
 <nav class="dieu-khoan-tag">
-    @Html.ActionLink("Điều Khoản", "dieu_khoan_view", "Home", new { @class = "dieukhoan" })
+    <a class = "dieu-khoan" href="https://localhost:44373/Home/dieu_khoan_view">Điều Khoản</a>
 </nav>
 <nav class="title-dieu-khoan">
     <div class="main-dieu-khoan">
