--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -63,7 +63,14 @@
 <nav class="product">
     <div class="product-list">
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_1.jpg" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_1.jpg" />
+            </div>
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
@@ -71,7 +78,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_2.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_2.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 2</h3>
                 <p>Price: 100$</p>
@@ -79,7 +94,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_3.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_3.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 3</h3>
                 <p>Price: 100$</p>
@@ -87,7 +110,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_4.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_4.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 4</h3>
                 <p>Price: 100$</p>
@@ -95,7 +126,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_5.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_5.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 5</h3>
                 <p>Price: 100$</p>
@@ -103,7 +142,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_6.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_6.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 6</h3>
                 <p>Price: 100$</p>
@@ -111,7 +158,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_7.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_7.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 7</h3>
                 <p>Price: 100$</p>
@@ -119,7 +174,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_8.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_8.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -127,7 +190,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_9.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_9.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 9</h3>
                 <p>Price: 100$</p>
@@ -135,7 +206,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_10.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_10.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 10</h3>
                 <p>Price: 100$</p>
@@ -143,7 +222,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_11.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_11.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 11</h3>
                 <p>Price: 100$</p>
@@ -151,7 +238,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_12.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_12.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 12</h3>
                 <p>Price: 100$</p>
@@ -159,7 +254,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_13.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_13.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 13</h3>
                 <p>Price: 100$</p>
@@ -167,7 +270,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_14.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_14.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 14</h3>
                 <p>Price: 100$</p>
@@ -175,7 +286,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_15.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_15.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 15</h3>
                 <p>Price: 100$</p>
@@ -183,7 +302,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_16.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_16.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 16</h3>
                 <p>Price: 100$</p>
@@ -191,7 +318,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_17.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_17.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 17</h3>
                 <p>Price: 100$</p>
@@ -199,7 +334,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_18.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_18.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 18</h3>
                 <p>Price: 100$</p>
@@ -207,7 +350,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_19.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_19.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 19</h3>
                 <p>Price: 100$</p>
@@ -215,7 +366,15 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_20.jpg" width="100" />
+            <div class="image">
+                <img src="~/Content/hinh-pro/pro_20.jpg" />
+            </div>
+
+            <div class="image-hover">
+                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
+            </div>
+
             <div class="product-item-info">
                 <h3>Product 20</h3>
                 <p>Price: 100$</p>
