--- a/Views/Home/product_details_view.cshtml
+++ b/Views/Home/product_details_view.cshtml
@@ -68,9 +68,9 @@
             <h2><span>100$</span></h2>
             <p>Co_Chay/Sweetwear/Based in SaiGon/Made in VietNam</p>
             <label for="size">Kích Thước</label>
-            <input type="radio" class="size" />S
-            <input type="radio" class="size" />M
-            <input type="radio" class="size" />L <br />
+            <input type="radio" name="size" class="size" />S
+            <input type="radio" name="size" class="size" />M
+            <input type="radio" name="size" class="size" />L <br />
             <label for="count">Số Lượng</label>
             <select class="count">
                 <option>1</option>
@@ -93,9 +93,46 @@
     </form>
 </nav>
 <nav class="decribe">
-    <div class="describe-details">
-        <h2>Mô Tả</h2>
+    <div class="labels">
+        <p style="font-size: 30px; font-weight:bold;">Mô Tả</p>
     </div>
+    <div class="descibe-title">
+        <p>
+            Co_Chay®<br /><br />
+
+            Streetwear <br /><br />
+
+            Based in Saigon<br /><br />
+
+            Made in Vietnam<br /><br />
+
+            Hệ Thống Cửa Hàng<br /><br />
+
+            - CN 1: 445 Sư Vạn Hạnh, P.12, Q.10<br /><br />
+
+            - CN 2: 48 Trần Quang Diệu, P.14, Q.3<br /><br />
+
+            - CN 3: 463 Quang Trung, P.10, Q. Gò Vấp<br /><br />
+
+            - CN 4: 350 Điện Biên Phủ, P.17, Q. Bình Thạnh (GTOWN 1)<br /><br />
+
+            - CN 5: 136 Nguyễn Hồng Đào, P14, Q. Tân Bình (GTOWN 2)<br /><br />
+
+            - CN 6: TNP - 26 Lý Tự Trọng, P. Bến Nghé, Q.1.<br /><br />
+
+            - CN 7: TNP (Sense Market) - Đối Diện Số 90 Lê Lai, P. Bến Nghé, Q.1.<br /><br />
+
+            - CN 8: PG2-08 Shophouse Vincom, Đường 30/4, P.Xuân Khánh, Q. Ninh Kiều, Cần Thơ.<br /><br />
+
+            - CN 9: PG2-06 Shophouse Vincom, 1096 Phạm Văn Thuận, P. Tân Mai, TP. Biên Hoà.<br /><br />
+
+            Viet Street Culture x Streetwear<br /><br />
+
+            SIZE CHART<br /><br />
+        </p>
+        <img src="~/Content/hinh-size/pro_1_size.jpg" />
+    </div>
+
 </nav>
 <nav class="footer">
     <div class="footer-title">
