--- a/Views/Home/web_clothes_view.cshtml
+++ b/Views/Home/web_clothes_view.cshtml
@@ -67,7 +67,7 @@
                 <img src="~/Content/hinh-pro/pro_1.jpg" />
             </div>
             <div class="image-hover">
-                <button type="submit" class="optional"><a href="#">Tùy Chọn</a></button>
+                <button type="submit" class="optional"><a href="https://localhost:44373/Home/product_details_view">Tùy Chọn</a></button>
                 <button type="submit" class="optional"><a href="#">Mua Ngay</a></button>
             </div>
 
