--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -32,7 +32,7 @@ body {
     font-family: monospace;
     background-image: url(hinh-pro/background.jpg);
     background-size:cover;
-    font-size: 14px;
+    font-size: 15px;
     color: black;
     text-align: center;
     align-items: center;
@@ -402,9 +402,15 @@ body {
 }
 .decribe {
     display:flex;
+    justify-content:space-between;
+    align-items:center;
+    flex-direction:column;
 }
-.decribe-details{
+    .decribe > .descibe-title {
+        font-size: 20px;
+        background-color: white;
+        border-radius:20px;
+    }
 
-}
 
 
