--- a/Views/Home/login_view.cshtml
+++ b/Views/Home/login_view.cshtml
@@ -41,7 +41,8 @@
                 <li><a href="https://localhost:44373/Home/chinh_sach_doi_tra_view">Chính Sách Đổi Trả</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
-                <li class="reversed"><p>Co_Chay® All Right Reserved</p></li>
+                <li class="reversed"><p>Co_Chay®</p></li>
+                <li class="reversed"><p>Copy By Needs Of Wisdom®</p></li>
             </ul>
         </div>
         <div class="contact_us">
