--- a/Views/Home/product_details_view.cshtml
+++ b/Views/Home/product_details_view.cshtml
@@ -132,6 +132,8 @@
         </p>
         <img src="~/Content/hinh-size/pro_1_size.jpg" />
     </div>
+</nav>
+<nav class="other-products">
 
 </nav>
 <nav class="footer">
@@ -151,7 +153,8 @@
                 <li><a href="https://localhost:44373/Home/chinh_sach_doi_tra_view">Chính Sách Đổi Trả</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
-                <li class="reversed"><p>Co_Chay® All Right Reserved</p></li>
+                <li class="reversed"><p>Co_Chay®</p></li>
+                <li class="reversed"><p>Copy By Needs Of Wisdom®</p></li>
             </ul>
         </div>
         <div class="contact_us">
