--- a/Views/Home/huong_dan_mua_hang_view.cshtml
+++ b/Views/Home/huong_dan_mua_hang_view.cshtml
@@ -95,7 +95,9 @@
             <h2>Liên Hệ</h2>
             <div class="icon">
                 <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a><br /><br />
+                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
         <div class="help">
@@ -113,9 +115,12 @@
         <div class="contact_us">
             <h2>Địa Chỉ</h2>
             <ul class="de-muc">
-                <li><a href="">Địa Chỉ: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
+                <li><a href="">CN Chính: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
+                <li><a href="">CN 2 <span style="font-weight: bold;">445 Sư Vạn Hạnh, P.12, Q.10</span></a></li>
+                <li><a href="">CN 3 <span style="font-weight: bold;">48 Trần Quang Diệu, P.14, Q.3</span></a></li>
+                <li><a href="">CN 4 <span style="font-weight: bold;">463 Quang Trung, P.10, Q. Gò Vấp</span></a></li>
                 <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
-                <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a></li>
+                <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a> <span style="color: white">|</span> <a href="">Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></a></li>
             </ul>
         </div>
 
