--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -31,7 +31,7 @@
 body {
     font-family: monospace;
     background-image: url(hinh-pro/background.jpg);
-    background-size:cover;
+    background-size: cover;
     font-size: 15px;
     color: black;
     text-align: center;
@@ -65,7 +65,8 @@ body {
     padding: 1rem 0;
 }
 .logo > a > img{
-    height:100px;
+    height:200px;
+
 }
 .nav-link {
     list-style-type: none;
@@ -80,6 +81,7 @@ body {
 .nav-link > li > a:hover {
     color: #000;
     background-color: #fff;
+    border-radius:20px;
 }
 
 .nav-link > li > a {
@@ -92,10 +94,16 @@ body {
     display: flex;    
 }
 
+    .search-box > .input-search{
+        height:50px;
+        padding:0 4rem;
+        border-radius:20px;
+    }
 
-.search-box > button {
-    padding: 0 2rem;
-}
+    .search-box > button {
+        padding: 0 1.5rem;
+        border-radius:20px;
+    }
 
 .input-search {
     padding: 0.5rem 2rem;
@@ -284,6 +292,12 @@ body {
     color: white;
     font-size: 50px;
     margin: 0 10px 0 10px;
+}
+.icon > a > i:hover{
+    color:black;
+    background-color:white;
+    border-radius:20px;
+    padding:0.5rem 0.5rem;
 }
 .help > h2{
     color:white;
