--- a/Areas/admin/Views/products/Delete.cshtml
+++ b/Areas/admin/Views/products/Delete.cshtml
@@ -37,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.images)
+            <img src="~/Content/Images/@Model.images" />
         </dt>
 
         <dd>
