--- a/Areas/admin/Views/categories/Index.cshtml
+++ b/Areas/admin/Views/categories/Index.cshtml
@@ -18,17 +18,17 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name_category)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_category }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_category }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_category })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.name_category)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id_category }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id_category }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id_category })
+            </td>
+        </tr>
+    }
 </table>
