--- a/Views/products/Delete.cshtml
+++ b/Views/products/Delete.cshtml
@@ -41,7 +41,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.images)
+            <img src="~/Content/Images/Model.images" />
         </dd>
 
         <dt>
