--- a/Areas/admin/Views/brands/Index.cshtml
+++ b/Areas/admin/Views/brands/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<do_an_web.Models.brand>
-
+﻿@*@model IEnumerable<do_an_web.Models.brand>*@
+@using PagedList.Mvc
+@model PagedList.IPagedList<do_an_web.Models.brand>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -13,22 +14,28 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.name_brand)
+            Nhãn hiệu
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name_brand)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_brand }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_brand }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_brand })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.name_brand)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id_brand }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id_brand }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id_brand })
+            </td>
+        </tr>
+    }
+
 
 </table>
+<br />
+<br />
+Trang@(Model.PageCount<Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+@Html.PagedListPager(Model,page => Url.Action("Index", new {page}))
