--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -426,5 +426,51 @@ body {
         border-radius:20px;
     }
 
-
-
+.box-form{
+    width:500px;
+    margin:auto;
+    margin-top:20px;
+}
+.content-form{
+    width:100%;
+    padding:0 20px;
+    margin: 5px 0;
+    box-sizing:border-box;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+.content-form h2{
+    text-align:center;
+    font-size:30px;
+    padding:10px;
+    box-sizing:border-box;
+}
+.form-group{
+    width:100%;
+    padding: 5px 0;
+}
+label{
+    display:block;
+    padding:5px 0;
+    color:#ff6a00;
+    font-weight:bold;
+}
+.txt-input{
+    width:100%;
+    padding:8px;
+    box-sizing:border-box;
+    border:none;
+    outline:none;
+    box-shadow:0px
+}
+.field-validation-error{
+    color:#ff0000;
+    padding: 2px 0;
+    display:block;
+    font-size:12px;
+}
+input[type="submit"]{
+    background:#ff6a00;
+    color:#fff;
+    font-weight:bold;
+    margin-bottom:10px;
+}
