--- a/Views/Home/Register_View.cshtml
+++ b/Views/Home/Register_View.cshtml
@@ -4,31 +4,40 @@
     Layout = "~/Views/Shared/Register.cshtml";
 }
 
-<div class="box-form">
-    <div class="content-form">
-        @using (Html.BeginForm("Register", "Home", FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-                <h2>Form Đăng Kí</h2>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.name_customer)
-                    @Html.TextBoxFor(m => m.name_customer, "", new { @class = "txt-input", @placeholder = "Tên" })
-                    @Html.ValidationMessageFor(m => m.name_customer)
+<div class="row justify-content-lg-center">
+    <div class="col-md-5">
+        @using (Html.BeginForm("Đăng Kí", "Home", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title">Register</div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.email_customer)
-                    @Html.TextBoxFor(m => m.email_customer, "", new {@class="txt-input", @placeholder ="Email"})
-                    @Html.ValidationMessageFor(m=>m.email_customer)
+                <div class="card-body">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.name_customer)
+                        @Html.TextBoxFor(m => m.name_customer, "", new { @class = "form-control", @placeholder = "Tên" })
+                        @Html.ValidationMessageFor(m => m.name_customer, "", new { @class = "badge badge-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.email_customer)
+                        @Html.TextBoxFor(m => m.email_customer, "", new { @class = "form-control", @placeholder = "Email" })
+                        @Html.ValidationMessageFor(m => m.email_customer, "", new { @class = "badge badge-danger" })
+                        @if (ViewBag.error != null)
+                        {
+                            <span class="badge badge-danger">@ViewBag.error</span>
+                        }
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m=>m.password_customer)
+                        @Html.TextBoxFor(m => m.password_customer, "", new {@class="form-control",@placeholder= "Mật Khẩu" })
+                        @Html.ValidationMessageFor(m => m.password_customer, "", new {@class="badge badge-banger"})
+                    </div>
+                    <div class="form-group">
+                        <input type="submit"name="submit" class="btn btn-danger" value="Đăng Kí" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m=>m.password_customer)
-                    @Html.TextBoxFor(m=>m.password_customer,"", new {@class="txt-input", @placeholder="Password"})
-                    @Html.ValidationMessageFor(m=>m.password_customer)
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Submit" name="Submit" class="txt-input" />
-                </div>
-            }
+            </div>
+        }
     </div>
 </div>
-
